--- a/backend/templates/blog/teaser_banner_big.html
+++ b/backend/templates/blog/teaser_banner_big.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="text-center">
-    <img class="img-responsive" width="80%" src="{% static "assets/img/8208.png" %}">
+    <img class="img-responsive" width="80%" src="{% static "assets/img/scoutamkerPro_jasny.png" %}">
     <br><br>
     <h3 style="font-size:1.2rem;"><a class="btn btn-danger" href="/signup/?role=P">Dołącz - darmowa rejestrajca</a> </h3>
 </div>
