--- a/profiles/templates/profiles/edit_profile.html
+++ b/profiles/templates/profiles/edit_profile.html
@@ -14,32 +14,25 @@
   {% include '_page_heading_with_picture.html' with image=user.picture %}
 {% endblock content_header %}
 
-
-
 {% block content %}
+
 <section id="profile" class="profile">
   <div class="container-fluid m-2 p-4" data-aos="fade-up">
-        <h1> KONTO {{ user.get_declared_role_display|upper }} </h1>
+    <h1> KONTO {{ user.get_declared_role_display|upper }} </h1>
 
-               <form class='profile-edit-form row' enctype="multipart/form-data" method="post">
-                  {% crispy user_basic_form %}
-                  {% crispy profile_form %}
-                  
-                <div class="col-12">
-                <button type="submit" name="update" value="Update" id="submit-id-update">{% trans 'Aktualizuj CV' %}</button>
-                </div>
-               </form>
-
-
-
-      <div>         
+    <form class='profile-edit-form row' enctype="multipart/form-data" method="post">
+      
+      {% crispy user_basic_form %}
+      {% crispy profile_form %}
+      
+      <div class="col-12">
+        <button type="submit" name="update" value="Update" id="submit-id-update">{
+          % trans 'Aktualizuj CV' %}
+        </button>
       </div>
-    </div>
+
+    </form>
   </div>
-</div>
-
 </section>
+
 {% endblock content %}
-
-
-
