--- a/backend/templates/partials/footer.html
+++ b/backend/templates/partials/footer.html
@@ -38,8 +38,10 @@
             </ul>
         </div>
         <div class="col-lg-4 col-md-6">
-            <img src="{% static 'assets/img/coop/lotto.jpg' %}" alt="logo_lotto">   
-            <img src="{% static 'assets/img/coop/vitasportpl.jpg' %}" alt="logo_vitasport">
+            <img src="{% static 'assets/img/coop/lotto.jpg' %}" alt="logo_lotto" class='footer-logos'>   
+            <a href='https://www.scoutmaker.pro'>
+                <img src="{% static 'assets/img/coop/scoutmakerPro_ciemny.png' %}" alt="logo_vitasport" class='footer-logos'>
+            </a>
         </div>
         {% comment %} <div class="col-lg-4 col-md-6 footer-newsletter">
         <h4>Dołącz do newslettera</h4>
