--- a/profiles/templates/profiles/cards/player/card_about.html
+++ b/profiles/templates/profiles/cards/player/card_about.html
@@ -1,23 +1,14 @@
 {% load i18n %}
 
-
 {% with template='platform/tables/two_table.html'  profile=show_user.profile %}
+
     <div class="card">
         <div class="card-body">
             <h2 class="card-title">{% trans 'O sobie' %}</h2>
             <h6 class="card-subtitle mb-2 text-muted"></h6>
-            <div class="card-text about-field">
-                {{ profile.about|default:'' }}
+            <div class="card-text about-field ">
+                {{ user.profile.about }}
             </div>
-
-            <div class="card-text">
-                <h2 class="mt-3 card-title">{% trans 'Treningi' %} </h2>
-                {% include template with key=_('Miasto dojazdu na treningi')         value=profile.address|default:'-'                        %}
-                {% include template with key=_('Oczekiwana liczba treningów')        value=profile.get_training_ready_display|default:'-' value_suffix=_('/tydzień')  %}
-                {% include template with key=_('Maksymalna odległość na treningi')   value=profile.practice_distance|default:'-' value_suffix=_('km')         %}
-            
-            </div>  <!-- end of card-text-->
-
         </div>
     </div>
 
