fix rozgrywki przekierowanie

--- a/plays/templates/plays/_tab_table.html
+++ b/plays/templates/plays/_tab_table.html
@@ -44,7 +44,7 @@
             {{ obj.date }}
             <img width="20" class=" avatar rounded img-responsive" title="profile picture" src="{{ obj.pic }}">
             {% if obj.team_url %}
-                <a href="obj.team_url"> {{ obj.team|truncatechars:25  }} </a>
+                <a href="{{ obj.team_url }}"> {{ obj.team|truncatechars:25  }} </a>
             {% else %}{{ obj.team|truncatechars:25  }} {% endif %}
         </td>
         <td class="d-table-cell tb-digit sticky-col">{{ obj.games }}</td>
@@ -87,7 +87,7 @@
                 {{ obj.date }}
                 <img width="20" class=" avatar rounded img-responsive" title="profile picture" src="{{ obj.pic }}">
                 {% if obj.team_url %}
-                    <a href="obj.team_url"> {{ obj.team|truncatechars:25  }} </a>
+                    <a href="{{ obj.team_url }}"> {{ obj.team|truncatechars:25  }} </a>
                 {% else %}{{ obj.team|truncatechars:25  }} {% endif %}
             </td>
          <td class="tb-digit">{{ obj.games }}</td>
