poprawki do marketplace

--- a/marketplace/templates/marketplace/announcement_club_for_coach.html
+++ b/marketplace/templates/marketplace/announcement_club_for_coach.html
@@ -70,7 +70,7 @@
             </div>
 
             <div>
-              <button type="button" class="btn-request" onclick="window.location.href='/users/{{ object.club.get_permalink }}';">Zobacz profil</button>
+              <button type="button" class="btn-request" onclick="window.location.href='{{ object.club.get_permalink }}';">Zobacz profil</button>
             </div>
 
         </div>
