--- a/marketplace/templates/marketplace/announcement_coach_for_club.html
+++ b/marketplace/templates/marketplace/announcement_coach_for_club.html
@@ -61,7 +61,7 @@
             </div>
 
             <div>
-              <button type="button" class="btn-request" onclick="window.location.href='/users/{{ object.creator.profile.get_permalink }}';">Zobacz profil</button>
+              <button type="button" class="btn-request" onclick="window.location.href='{{ object.creator.profile.get_permalink }}';">Zobacz profil</button>
             </div>
 
         </div>
