--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -161,25 +161,25 @@
 .btn-club-for-player {
     background-color: #28a745 !important;
     color: #fff !important;
-<!--    border-color: #fff;-->
+    border-color: transparent;
 }
 
 .btn-coach-for-club {
     background-color: #17a2b8 !important;
     color: #fff !important;
-<!--    border-color: #fff;-->
+    border-color: transparent;
 }
 
 .btn-club-for-coach {
     background-color: #007bff !important;
     color: #fff !important;
-<!--    border-color: #fff;-->
+    border-color: transparent;
 }
 
 .btn-player-for-club {
     background-color: #343a40 !important;
     color: #fff !important;
-<!--    border-color: #fff;-->
+    border-color: transparent;
 }
 </style>
 
