--- a/marketplace/templates/marketplace/filters/filter_position.html
+++ b/marketplace/templates/marketplace/filters/filter_position.html
@@ -19,5 +19,6 @@
     <option {% if 'Pomocnik ofensywny (10)' in request.GET|get_list:'position' %} selected="selected" {% endif %}>Pomocnik ofensywny (10)</option>
     <option {% if 'Skrzydłowy' in request.GET|get_list:'position' %} selected="selected" {% endif %}>Skrzydłowy</option>
     <option {% if 'Napastnik' in request.GET|get_list:'position' %} selected="selected" {% endif %}>Napastnik</option>
+    <option {% if 'Dowolna' in request.GET|get_list:'position' %} selected="selected" {% endif %}>Dowolna</option>
 </select>
 
