Revert "Merge branch 'master' into 'master'"
This reverts merge request !30

--- a/backend/templates/partials/footer.html
+++ b/backend/templates/partials/footer.html
@@ -37,13 +37,9 @@
                 <li><i class="bx bx-chevron-right"></i> {% include 'partials/_link_limit.html' %}</li>
             </ul>
         </div>
-        <div class="col-lg-4 col-md-6 footer-banner-side">
+        <div class="col-lg-4 col-md-6">
             <img src="{% static 'assets/img/coop/lotto.jpg' %}" alt="logo_lotto">   
-            <a href='https://www.scoutmaker.pro'><img src="{% static 'assets/img/banner/scoutmaker_banner_dark.png' %}" alt="banner_dark"></a>
-            {% comment %} 
-            Dodatkowo można usunąć logo vitasport (static/assets/coop/vitasportpl.jpg), 
-            po wymianie banneru nie jest nam potrzebne.
-            {% endcomment %}
+            <img src="{% static 'assets/img/coop/vitasportpl.jpg' %}" alt="logo_vitasport">
         </div>
         {% comment %} <div class="col-lg-4 col-md-6 footer-newsletter">
         <h4>Dołącz do newslettera</h4>
