--- a/app/templates/platform/buttons/action_script.html
+++ b/app/templates/platform/buttons/action_script.html
@@ -63,7 +63,11 @@
             class="{{ button_class }} {% if active_class %}{{ active_class }}{% endif %} " 
 
             {% if button_actions.onclick %}
-                 onclick="{{ button_actions.onclick.name }}(event, '{{ button_actions.onclick.param }}' {% if button_actions.onclick.param2 %}, '{{ button_actions.onclick.param2 }}' {% endif %})"
+                {% if button_actions.onclick.function %}
+                    onclick="{{ button_actions.onclick.function }}"
+                {% else %}
+                    onclick="{{ button_actions.onclick.name }}(event, '{{ button_actions.onclick.param }}' {% if button_actions.onclick.param2 %}, '{{ button_actions.onclick.param2 }}' {% endif %})"
+                {% endif %}
             {% endif %}
 
             {% if button_action.onclick %}
