--- a/clubs/templates/clubs/show_club.html
+++ b/clubs/templates/clubs/show_club.html
@@ -8,7 +8,6 @@
 {% endblock content_header %}
 
 
-
 {% block content %}
 <section id="clubs" class="club">
     <div class="container">
@@ -32,16 +31,14 @@
             </div>
                 {% for team in teams %}
                     {% if forloop.first %}
-                    <div class="col-sm-12 ml-2">
-                        <h3>{% trans 'Drużyny' %}</h3>
-                    </div>                       
+                    <div class="col-sm-12 ml-2"><h3>{% trans 'Drużyny' %}</h3></div>                       
                     {% endif %}
                     <div class="col-md-4">
-                        {% include 'clubs/teams/card.html' with object=team  see_team=True picture_size=True %}        
+                        {% include 'clubs/teams/card.html' with object=team see_team=True picture_size=True %}        
                     </div>
                 {% empty %}
                 <div class="col-md-12">
-                    <h2> {% trans 'Club nie ma przypietych zespolow.' %}</h2>
+                    <h2> {% trans 'Club nie ma przypietych zespołów.' %}</h2>
                 </div>
                 {% endfor %}
         </div>
