--- a/marketplace/templates/marketplace/filters/filter_gender.html
+++ b/marketplace/templates/marketplace/filters/filter_gender.html
@@ -1,6 +1,6 @@
 
-<select name="gender" data-width="{{ size }}"  class="form-control selectpicker" data-allow-clear="true" title="płeć">
-{% for option in options %}
-    <option {% if request.GET.gender == option %} selected {% endif %} value="{{ option }}">{{ option }}</option>
-{% endfor %}
+<select name="gender" data-width="{{ size }}"  class="selectpicker" data-allow-clear="true" title="płeć">
+    {% for option in options %}
+        <option {% if request.GET.gender == option %} selected {% endif %} value="{{ option }}">{{ option }}</option>
+    {% endfor %}
 </select>
