--- a/app/templates/platform/buttons/action_script.html
+++ b/app/templates/platform/buttons/action_script.html
@@ -9,7 +9,7 @@
       <button class="btn-request dropdown-toggle" type="button" id="addAnnoucementButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="icofont-plus"></i> Dodaj ogłoszenie</button>
         <div class="dropdown-menu" aria-labelledby="addAnnoucementButton">
             {% for option in options %}
-        <a class="dropdown-item" href="#" onclick="get_add_announcement_form(event, '', '', '{{ option.flag }}')" data-toggle="modal" data-target="#addAnnouncementModal" data-ann-action-name="{{ option.flag }}">{{ option.friendly_name }}</a>
+                <a class="dropdown-item" href="#addAnnouncementModal" onclick="get_add_announcement_form(event, '', '', '{{ option.flag }}')" data-toggle="modal" data-target="#addAnnouncementModal" data-ann-action-name="{{ option.flag }}">{{ option.friendly_name }}</a>
             {% endfor %}
       </div>
     </div>
