--- a/profiles/templates/profiles/modals/_verification_modal.html
+++ b/profiles/templates/profiles/modals/_verification_modal.html
@@ -1,6 +1,8 @@
 {% load crispy_forms_tags %}
 {% load i18n %}
+<style >
 
+ </style>
 
 <div class="modal fade" id="verificationModal" tabindex="-1" aria-labelledby="verificationModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-fullscreen-sm-down">
@@ -53,5 +55,40 @@
 </div>
 
 {% if trigger %}
-<script type="text/javascript">$(window).on('load',function(){$('#verificationModal').modal('show');});</script>
+<script type="text/javascript">
+  
+  $(window).on('load',function(){$('#verificationModal').modal('show');});
+
+
+    $(document).ready(function() {
+      
+    });
+  $(document).on("click", "#div_id_team_not_found", function(){ 
+
+    if($('#id_team_not_found').is(':checked')) {
+
+      $("#text_team_div").fadeIn()
+  } else {
+      $("#text_team_div").hide()
+  }
+
+
+});
+  $(document).on("click", "#id_has_team_1", function(){
+    
+      if($('#id_has_team_1').is(':checked')) { 
+            $("#select_team_div").fadeIn()
+            $("#text_team_div").hide()
+        } 
+   });
+  
+  $(document).on("click", "#id_has_team_2", function(){
+      if($('#id_has_team_2').is(':checked')) { 
+            $("#select_team_div").hide()
+            $("#text_team_div").fadeIn()
+        }
+  });
+  </script>
+
+</script>
 {% endif %}
