--- a/soccerbase/templates/soccerbase/tables/filters_desktop_players.html
+++ b/soccerbase/templates/soccerbase/tables/filters_desktop_players.html
@@ -28,11 +28,31 @@
         {% include 'soccerbase/tables/filters/filter_age_max_input.html' with size=120 %}
     </div>
 
-      <div>
-          <button type="button"  class="{% if foregin %}btn-request btn-requested{% else %}btn-request{% endif %}" onclick="window.location.href='{% if foregin %}{% url 'soccerbase:players' %}{% else %}{% url 'soccerbase:players_quick' 'foregin' %}{% endif %}';">{% if foregin %}Polska{% else %}zagraniczni{% endif %}</button>
-      </div>
-      <div>
-          <button type="button"  class="{% if juniors %}btn-request btn-requested{% else %}btn-request{% endif %}" onclick="window.location.href='{% if juniors %}{% url 'soccerbase:players'%}{% else %}{% url 'soccerbase:players_quick' 'juniors' %}{% endif %}';">{% if junors %}Polska{% else %}młodzieżowiec{% endif %}</button>
-      </div>
+    <div>
+        <button 
+            type="button" 
+            class="{% if foregin %}btn-request btn-requested{% else %}btn-request{% endif %}" 
+            onclick="foreignAndJuniorURLS(
+                `{% if foregin %} {% url 'soccerbase:players'%}
+                    {% else %} {% url 'soccerbase:players_quick' 'foregin' %}
+                {% endif %}`)"
+        >
+        {% if foregin %}Polska{% else %}zagraniczni{% endif %}
+        </button>
+    </div>
+    <div>
+        <button 
+            type="button" 
+            class="{% if juniors %}btn-request btn-requested{% else %}btn-request{% endif %}" 
+            onclick="foreignAndJuniorURLS(
+                `{% if juniors %} {% url 'soccerbase:players'%}
+                    {% else %} {% url 'soccerbase:players_quick' 'juniors' %}
+                {% endif %}`)"
+        >
+        {% if juniors %}Polska{% else %}młodzieżowiec{% endif %}
+        </button>
+    </div>
+
+<script src="{% static 'assets/js/filters.js' %}"></script>
 
 {% endblock desktop_filters_body %}
