--- a/profiles/templates/profiles/cards/player/card_primary.html
+++ b/profiles/templates/profiles/cards/player/card_primary.html
@@ -21,21 +21,17 @@
             {% endif %}
             
             {% include template with key=_('Lokalizacja') value=profile.voivodeship|default:'-' %}
-            
         {% endwith %}
     </div>
 
-    <!-- Club card -->
     <h2 class="card-title">{% trans 'Klub' %}</h2>
     <h6 class="card-subtitle mb-2 text-muted"></h6>
 
     <div class="card-text">
         {% with profile=show_user.profile template='platform/tables/two_table.html' %}
-
-            {% include template with key=_('Obecna drużyna')  value=profile.display_team|default:'-'|upper %}
-            {% include template with key=_('Poziom rozgrywkowy')          value=profile.display_league_name|default:'-'|upper   link=profile.get_league_permalink  %}
-            {% include template with key=_('Województwo')     value=profile.voivodeship_raw|default:'-' %}
-            
+            {% include template with key=_('Obecna drużyna')     value=profile.display_team|default:'-'|upper link=profile.get_team_permalink %}
+            {% include template with key=_('Poziom rozgrywkowy') value=profile.display_league_top_parent|default:'-'|upper   link=profile.get_league_permalink  %}
+            {% include template with key=_('Województwo')        value=profile.display_voivodeship|default:'-' %}
         {% endwith %}
     </div>
 
